<resources>
    <string name="app_name">Calculator &amp; Converter</string>
    ///////////////SciCalculator///////////////////
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="dot">.</string>
    <string name="modulo">%</string>
    <string name="equal">=</string>
    <string name="delete">DEL</string>
    <string name="clear">C</string>
    <string name="RAD">RAD</string>
    <string name="DEG">DEG</string>

    <string name="parentheses_open">(</string>
    <string name="parentheses_close">)</string>
    <string name="root">"\u221A"</string>
    <string name="power">^</string>
    <string name="plus_or_minus">+/<Big>-</Big></string>
    <string name="square">X<sup><small>2</small></sup></string>
    <string name="factorial">!</string>
    <string name="inverse">1/X</string>
    <string name="e_constant">e</string>
    <string name="pi">"\u03A0"</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sin">sin</string>
    <string name="sin_inverse">sin<sup><small>-1</small></sup></string>
    <string name="cos">cos</string>
    <string name="cos_inverse">cos<sup><small>-1</small></sup></string>
    <string name="tan">tan</string>
    <string name="tan_inverse">tan<sup><small>-1</small></sup></string>

    <!-- TODO: Remove or change this placeholder text -->

    ///////////////SciCalculator///////////////////
    ///////////////Unit///////////////////

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eleven">Eleven</string>
    <string name="twelve">Twelve</string>
    <string name="thirteen">Thirteen</string>
    <string name="fourteen">Fourteen</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">kelvin</string>
    <string name="area">Area</string>
    <string name="data_transfer_rate">Data Transfer Rate</string>
    <string name="digital_storage">Digital Storage</string>
    <string name="energy">Energy</string>
    <string name="frequency">Frequency</string>
    <string name="fuel_economy">Fuel Economy</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="plane_angel">Plane Angle</string>
    <string name="pressure">Pressure</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>
    <string name="square_kilometre">Square kilometre</string>
    <string name="square_metre">Square metre</string>
    <string name="square_mile">Square mile</string>
    <string name="square_yard">Square yard</string>
    <string name="square_foot">Square foot</string>
    <string name="square_inch">Square inch</string>
    <string name="hectare">Hectare</string>
    <string name="acre">Acre</string>
    <string name="bit_per_second">Bit per second</string>
    <string name="kilobit_per_second">Kilobit per second</string>
    <string name="kilobyte_per_second">Kilobyte per second</string>
    <string name="megabit_per_second">Megabit per second</string>
    <string name="megabyte_per_second">Megabyte per second</string>
    <string name="gigabit_per_second">Gigabit per second</string>
    <string name="gigabyte_per_second">Gigabyte per second</string>
    <string name="terabit_per_second">Terabit per second</string>
    <string name="terabyte_per_second">Terabyte per second</string>
    <string name="bit">Bit</string>
    <string name="kilobit">Kilobit</string>
    <string name="megabit">Megabit</string>
    <string name="gigabit">Gigabit</string>
    <string name="terabit">Terabit</string>
    <string name="petabit">Petabit</string>
    <string name="bytes">Byte</string>
    <string name="kilobyte">Kilobyte</string>
    <string name="megabyte">Megabyte</string>
    <string name="gigabyte">Gigabyte</string>
    <string name="terabyte">Terabyte</string>
    <string name="petabyte">Petabyte</string>
    <string name="joule">Joule</string>
    <string name="kilojoule">Kilojoule</string>
    <string name="gram_calorie">Gram calorie</string>
    <string name="kilocalorie">Kilocalorie</string>
    <string name="watt_hour">Watt hour</string>
    <string name="kilowatt_hour">Kilowatt hour</string>
    <string name="electronvolt">Electronvolt</string>
    <string name="british_thermal_unit">British thermal unit</string>
    <string name="us_therm">US therm</string>
    <string name="foot_pound">Foot-pound</string>
    <string name="hertz">Hertz</string>
    <string name="kilohertz">Kilohertz</string>
    <string name="megahertz">Megahertz</string>
    <string name="gigahertz">Gigahertz</string>
    <string name="us_miles_per_gallon">US Miles per gallon</string>
    <string name="miles_per_gallon_imperial">Miles per gallon (Imperial)</string>
    <string name="kilometre_per_litre">Kilometre per litre</string>
    <string name="litre_per_100_kilometres">Litre per 100 kilometres</string>
    <string name="kilometre">Kilometre</string>
    <string name="metre">Metre</string>
    <string name="centimetre">Centimetre</string>
    <string name="millimetre">Millimetre</string>
    <string name="micrometre">Micrometre</string>
    <string name="nanometre">Nanometre</string>
    <string name="mile">Mile</string>
    <string name="yard">Yard</string>
    <string name="foot">Foot</string>
    <string name="inch">Inch</string>
    <string name="nautical_mile">Nautical mile</string>
    <string name="tonne">Tonne</string>
    <string name="kilogram">Kilogram</string>
    <string name="gram">Gram</string>
    <string name="milligram">Milligram</string>
    <string name="microgram">Microgram</string>
    <string name="imperial_ton">Imperial ton</string>
    <string name="stone">Stone</string>
    <string name="pound">Pound</string>
    <string name="ounce">Ounce</string>
    <string name="degree">Degree</string>
    <string name="gradian">Gradian</string>
    <string name="minute_of_arc">Minute of arc</string>
    <string name="radian">Radian</string>
    <string name="second_of_arc">Second of arc</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="bar">Bar</string>
    <string name="pascal">Pascal</string>
    <string name="pound_force_per_square_inch">Pound-force per square inch</string>
    <string name="torr">Torr</string>
    <string name="miles_per_hour">Miles per hour</string>
    <string name="foot_per_second">Foot per second</string>
    <string name="metre_per_second">Metre per second</string>
    <string name="kilometre_per_hour">Kilometre per hour</string>
    <string name="knot">Knot</string>
    <string name="nanosecond">Nanosecond</string>
    <string name="microsecond">Microsecond</string>
    <string name="millisecond">Millisecond</string>
    <string name="second">Second</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="decade">Decade</string>
    <string name="century">Century</string>
    <string name="us_liquid_gallon">US liquid gallon</string>
    <string name="us_liquid_quart">US liquid quart</string>
    <string name="us_liquid_pint">US liquid pint</string>
    <string name="us_legal_cup">US legal cup</string>
    <string name="us_fluid_ounce">US fluid ounce</string>
    <string name="us_tablespoon">US tablespoon</string>
    <string name="us_teaspoon">US teaspoon</string>
    <string name="litre">Litre</string>
    <string name="millilitre">Millilitre</string>
    <string name="imperial_gallon">Imperial gallon</string>
    <string name="imperial_quart">Imperial quart</string>
    <string name="imperial_pint">Imperial pint</string>
    <string name="imperial_fluid_ounce">Imperial fluid ounce</string>
    <string name="imperial_tablespoon">Imperial tablespoon</string>
    <string name="imperial_teaspoon">Imperial teaspoon</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="imageview">ImageView</string>
    <string name="action_exit">Exit</string>
    <string name="action_view_ad">View Ad</string>
    <string name="available_conversions">Available Conversions</string>
    <string name="action_toggle_theme">Toggle Theme</string>
    ///////////////Unit///////////////////
</resources>
