<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UnitConverterFragmentsTabs.MassFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mass Fragment"

        android:textSize="50dp"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tonne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_tonne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tonne"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_kilogram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_kilogram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kilogram"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_gram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_gram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gram"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_milligram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_milligram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/milligram"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_microgram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_microgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/microgram"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_imperial_ton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_imperial_ton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/imperial_ton"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_stone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_stone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stone"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_pound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_pound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pound"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_ounce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_ounce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ounce"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>