<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UnitConverterFragmentsTabs.SpeedFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_miles_per_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_miles_per_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/miles_per_hour"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_foot_per_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_foot_per_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/foot_per_second"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_metre_per_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_metre_per_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/metre_per_second"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_kilometre_per_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_kilometre_per_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kilometre_per_hour"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_knot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_knot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/knot"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>